:construction: > ADD main function to main.ipynb

--- a/main.ipynb
+++ b/main.ipynb
@@ -31,7 +31,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
         "id": "Nhv-8CuP4nWU"
       },
@@ -59,7 +59,7 @@
       "metadata": {
         "id": "RGu67XJP6k_e"
       },
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": []
     },
     {
@@ -79,7 +79,7 @@
       "metadata": {
         "id": "hZUDhWIt6pmc"
       },
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": []
     },
     {
@@ -94,12 +94,35 @@
     {
       "cell_type": "code",
       "source": [
-        ""
+        "def main():\n",
+        "    '''\n",
+        "    main executes selected option\n",
+        "\n",
+        "    display options and executes validated option\n",
+        "    '''\n",
+        "    options = dict(\n",
+        "        exit=exit\n",
+        "    )\n",
+        "    \n",
+        "    res = True\n",
+        "    while res:\n",
+        "        for i, k in enumerate(options.keys()):\n",
+        "            print(f'{i+1}. {k}')\n",
+        "        \n",
+        "        option = input('Seleccione Una Opción: ')\n",
+        "        while option not in options:\n",
+        "            option = input('Opcion no Encontrada. Seleccione Una Opción: ')\n",
+        "        \n",
+        "        ex = options.get(option, lambda: False)\n",
+        "        res = ex()\n",
+        "        res_string = f'Resultado:\\n{res}' if res else ''\n",
+        "        \n",
+        "        print(f'{res_string}\\n{\"=\" *100}')"
       ],
       "metadata": {
         "id": "bsnd12fq6wLk"
       },
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -114,13 +137,30 @@
     {
       "cell_type": "code",
       "source": [
-        ""
+        "if __name__ == '__main__':\n",
+        "    main()"
       ],
       "metadata": {
-        "id": "6Nm0DbMV6zcQ"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "6Nm0DbMV6zcQ",
+        "outputId": "d425eac3-37d7-43ed-a395-1a1ea8db21ba"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "1. exit\n",
+            "Seleccione Una Opción: not_exisiting\n",
+            "Opcion no Encontrada. Seleccione Una Opción: exit\n",
+            "\n",
+            "====================================================================================================\n"
+          ]
+        }
+      ]
     }
   ],
   "metadata": {
