:construction: > ADD load_data function in main.ipynb

--- a/main.ipynb
+++ b/main.ipynb
@@ -31,7 +31,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "id": "Nhv-8CuP4nWU"
       },
@@ -54,12 +54,30 @@
     {
       "cell_type": "code",
       "source": [
-        ""
+        "def load_data(path: str='dataset.json') -> pd.DataFrame:\n",
+        "    '''\n",
+        "    load_data Load dataset from specified path\n",
+        "\n",
+        "    Load data from path and preprocess for application consumption by removing unnecesary information\n",
+        "\n",
+        "    Args:\n",
+        "        path (str, optional): path where data is saved. Defaults to 'dataset.json'.\n",
+        "\n",
+        "    Returns:\n",
+        "        pd.DataFrame: dataset with necessary information for consumption\n",
+        "    '''\n",
+        "    with open(path) as dataset_raw:\n",
+        "        df = pd.DataFrame.from_records(js.loads(l) for l in dataset_raw)\n",
+        "\n",
+        "        print(df.columns)\n",
+        "        return df\n",
+        "\n",
+        "load_data().describe([.25, .5, .75, 1], include='all')"
       ],
       "metadata": {
         "id": "RGu67XJP6k_e"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -79,7 +97,7 @@
       "metadata": {
         "id": "hZUDhWIt6pmc"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -122,7 +140,7 @@
       "metadata": {
         "id": "bsnd12fq6wLk"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -147,7 +165,7 @@
         "id": "6Nm0DbMV6zcQ",
         "outputId": "d425eac3-37d7-43ed-a395-1a1ea8db21ba"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
