--- a/main.ipynb
+++ b/main.ipynb
@@ -57,102 +57,7 @@
       "metadata": {
         "id": "RGu67XJP6k_e"
       },
-      "outputs": [
-        {
-          "data": {
-            "text/html": [
-              "<div>\n",
-              "<style scoped>\n",
-              "    .dataframe tbody tr th:only-of-type {\n",
-              "        vertical-align: middle;\n",
-              "    }\n",
-              "\n",
-              "    .dataframe tbody tr th {\n",
-              "        vertical-align: top;\n",
-              "    }\n",
-              "\n",
-              "    .dataframe thead th {\n",
-              "        text-align: right;\n",
-              "    }\n",
-              "</style>\n",
-              "<table border=\"1\" class=\"dataframe\">\n",
-              "  <thead>\n",
-              "    <tr style=\"text-align: right;\">\n",
-              "      <th></th>\n",
-              "      <th>date</th>\n",
-              "      <th>content</th>\n",
-              "      <th>user</th>\n",
-              "      <th>retweetCount</th>\n",
-              "    </tr>\n",
-              "  </thead>\n",
-              "  <tbody>\n",
-              "    <tr>\n",
-              "      <th>0</th>\n",
-              "      <td>2021-03-30T03:33:46+00:00</td>\n",
-              "      <td>Support 👇\\n\\n#FarmersProtest</td>\n",
-              "      <td>{'username': 'ShashiRajbhar6', 'displayname': ...</td>\n",
-              "      <td>0</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>1</th>\n",
-              "      <td>2021-03-30T03:33:23+00:00</td>\n",
-              "      <td>Supporting farmers means supporting our countr...</td>\n",
-              "      <td>{'username': 'kaursuk06272818', 'displayname':...</td>\n",
-              "      <td>0</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>2</th>\n",
-              "      <td>2021-03-30T03:31:00+00:00</td>\n",
-              "      <td>Support farmers if you are related to food #St...</td>\n",
-              "      <td>{'username': 'kaursuk06272818', 'displayname':...</td>\n",
-              "      <td>0</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>3</th>\n",
-              "      <td>2021-03-30T03:30:45+00:00</td>\n",
-              "      <td>#StopHateAgainstFarmers support #FarmersProtes...</td>\n",
-              "      <td>{'username': 'SukhdevSingh_', 'displayname': '...</td>\n",
-              "      <td>1</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>4</th>\n",
-              "      <td>2021-03-30T03:30:30+00:00</td>\n",
-              "      <td>You hate farmers I hate you, \\nif you love the...</td>\n",
-              "      <td>{'username': 'Davidmu66668113', 'displayname':...</td>\n",
-              "      <td>0</td>\n",
-              "    </tr>\n",
-              "  </tbody>\n",
-              "</table>\n",
-              "</div>"
-            ],
-            "text/plain": [
-              "                        date  \\\n",
-              "0  2021-03-30T03:33:46+00:00   \n",
-              "1  2021-03-30T03:33:23+00:00   \n",
-              "2  2021-03-30T03:31:00+00:00   \n",
-              "3  2021-03-30T03:30:45+00:00   \n",
-              "4  2021-03-30T03:30:30+00:00   \n",
-              "\n",
-              "                                             content  \\\n",
-              "0                       Support 👇\\n\\n#FarmersProtest   \n",
-              "1  Supporting farmers means supporting our countr...   \n",
-              "2  Support farmers if you are related to food #St...   \n",
-              "3  #StopHateAgainstFarmers support #FarmersProtes...   \n",
-              "4  You hate farmers I hate you, \\nif you love the...   \n",
-              "\n",
-              "                                                user  retweetCount  \n",
-              "0  {'username': 'ShashiRajbhar6', 'displayname': ...             0  \n",
-              "1  {'username': 'kaursuk06272818', 'displayname':...             0  \n",
-              "2  {'username': 'kaursuk06272818', 'displayname':...             0  \n",
-              "3  {'username': 'SukhdevSingh_', 'displayname': '...             1  \n",
-              "4  {'username': 'Davidmu66668113', 'displayname':...             0  "
-            ]
-          },
-          "execution_count": 2,
-          "metadata": {},
-          "output_type": "execute_result"
-        }
-      ],
+      "outputs": [],
       "source": [
         "def load_data(path: str='dataset.json') -> pd.DataFrame:\n",
         "    '''\n",
@@ -176,7 +81,7 @@
         "        ]]\n",
         "        return df\n",
         "\n",
-        "load_data().head(5)"
+        "# load_data().head(5)"
       ]
     },
     {
@@ -189,13 +94,67 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### 3.1 Los top 10 tweets más retweeted"
+      ]
+    },
+    {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 3,
       "metadata": {
         "id": "hZUDhWIt6pmc"
       },
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "                                                  content  retweetCount\n",
+            "408128  why aren’t we talking about this?! #FarmersPro...        315547\n",
+            "395142  We stand in solidarity with the #FarmersProtes...        103957\n",
+            "266196  I still #StandWithFarmers and support their pe...         67694\n",
+            "366579  “Paid actors,” huh? Quite the casting director...         35921\n",
+            "372793  What in the human rights violations is going o...         26972\n",
+            "314192  Happy to share that I’ve donated $10,000 to pr...         23251\n",
+            "215034  There has been much social media coverage arou...         20132\n",
+            "398011  Farmers feed the world. Fight for them. Protec...         18744\n",
+            "325261  Should be talking about this! #FarmersProtest\\...         17368\n",
+            "163689  To all of my influencer/celeb friends- read up...         15677\n"
+          ]
+        },
+        {
+          "data": {
+            "text/plain": [
+              "True"
+            ]
+          },
+          "execution_count": 3,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "def tweets_most_retweeted(qty: int=10, df: pd.DataFrame=load_data()) -> bool:\n",
+        "    '''\n",
+        "    tweets_most_retweeted table of content and retweets count\n",
+        "\n",
+        "    Sort DataFrame by retweets count and display the content of the specified best\n",
+        "\n",
+        "    Args:\n",
+        "        qty (int, optional): number of tweets to be displayed. Defaults to 10.\n",
+        "        df (pd.DataFrame, optional): data source. Defaults to function call load_data().\n",
+        "\n",
+        "    Returns:\n",
+        "        bool: Flow control, True if everything works correctly\n",
+        "    '''\n",
+        "    top_qty = df.sort_values('retweetCount', ascending=False).head(qty)\n",
+        "    print(top_qty[['content', 'retweetCount']])\n",
+        "    return True\n",
+        "\n",
+        "tweets_most_retweeted()\n"
+      ]
     },
     {
       "cell_type": "markdown",
