:construction: > ADD tweets_most_retweeted option to main function in main.ipynb

--- a/main.ipynb
+++ b/main.ipynb
@@ -167,7 +167,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 4,
       "metadata": {
         "id": "bsnd12fq6wLk"
       },
@@ -180,6 +180,7 @@
         "    display options and executes validated option\n",
         "    '''\n",
         "    options = dict(\n",
+        "        top10retweets=tweets_most_retweeted,\n",
         "        exit=exit\n",
         "    )\n",
         "    \n",
@@ -210,7 +211,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 5,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -223,7 +224,8 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "1. exit\n",
+            "1. top10retweets\n",
+            "2. exit\n",
             "\n",
             "====================================================================================================\n"
           ]
