--- a/main.ipynb
+++ b/main.ipynb
@@ -106,35 +106,7 @@
       "metadata": {
         "id": "hZUDhWIt6pmc"
       },
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "                                                  content  retweetCount\n",
-            "408128  why aren’t we talking about this?! #FarmersPro...        315547\n",
-            "395142  We stand in solidarity with the #FarmersProtes...        103957\n",
-            "266196  I still #StandWithFarmers and support their pe...         67694\n",
-            "366579  “Paid actors,” huh? Quite the casting director...         35921\n",
-            "372793  What in the human rights violations is going o...         26972\n",
-            "314192  Happy to share that I’ve donated $10,000 to pr...         23251\n",
-            "215034  There has been much social media coverage arou...         20132\n",
-            "398011  Farmers feed the world. Fight for them. Protec...         18744\n",
-            "325261  Should be talking about this! #FarmersProtest\\...         17368\n",
-            "163689  To all of my influencer/celeb friends- read up...         15677\n"
-          ]
-        },
-        {
-          "data": {
-            "text/plain": [
-              "True"
-            ]
-          },
-          "execution_count": 3,
-          "metadata": {},
-          "output_type": "execute_result"
-        }
-      ],
+      "outputs": [],
       "source": [
         "def tweets_most_retweeted(qty: int=10, df: pd.DataFrame=load_data()) -> bool:\n",
         "    '''\n",
@@ -153,7 +125,74 @@
         "    print(top_qty[['content', 'retweetCount']])\n",
         "    return True\n",
         "\n",
-        "tweets_most_retweeted()\n"
+        "# tweets_most_retweeted()\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### 3.2 Los top 10 usuarios en función a la cantidad de tweets que emitieron"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 3,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "                 num_tweets\n",
+            "username                   \n",
+            "harjot_tweeting        7134\n",
+            "tasveersandhu          2091\n",
+            "shells_n_petals        1991\n",
+            "jot__b                 1841\n",
+            "rebelpacifist          1806\n",
+            "rumsomal               1722\n",
+            "Iamjazzie96            1502\n",
+            "Jass_k_G               1460\n",
+            "DigitalKisanBot        1453\n",
+            "z_khalique007          1446\n"
+          ]
+        },
+        {
+          "data": {
+            "text/plain": [
+              "True"
+            ]
+          },
+          "execution_count": 3,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "def users_most_tweet_count(qty: int=10, df: pd.DataFrame=load_data()) -> bool:\n",
+        "    '''\n",
+        "    users_most_tweet_count table of users and tweets count\n",
+        "\n",
+        "    Group Dataframe by users and sort by tweets count and display username and tweets count \n",
+        "\n",
+        "    Args:\n",
+        "        qty (int, optional): number of users to be displayed. Defaults to 10.\n",
+        "        df (pd.DataFrame, optional): data source. Defaults to function call load_data().\n",
+        "\n",
+        "    Returns:\n",
+        "        bool: Flow control, True if everything works correctly\n",
+        "    '''\n",
+        "    users_df = df[['user', 'content']].copy(deep=True)\n",
+        "    users_df['username'] = users_df.user.map(lambda x: x['username'])\n",
+        "    users_df['num_tweets'] = users_df['content']\n",
+        "    users_df = users_df[['username', 'num_tweets']]\n",
+        "    users_df = users_df.groupby('username').count()\n",
+        "    users_df = users_df.sort_values('num_tweets', ascending=False)\n",
+        "    print(users_df.head(10))\n",
+        "    return True\n",
+        "\n",
+        "users_most_tweet_count()"
       ]
     },
     {
