:construction: > ADD users_most_tweet_count option to main function in main.ipynb

--- a/main.ipynb
+++ b/main.ipynb
@@ -108,7 +108,7 @@
       },
       "outputs": [],
       "source": [
-        "def tweets_most_retweeted(qty: int=10, df: pd.DataFrame=load_data()) -> bool:\n",
+        "def tweets_most_retweeted(qty: int=10, df: pd.DataFrame=None) -> bool:\n",
         "    '''\n",
         "    tweets_most_retweeted table of content and retweets count\n",
         "\n",
@@ -116,7 +116,7 @@
         "\n",
         "    Args:\n",
         "        qty (int, optional): number of tweets to be displayed. Defaults to 10.\n",
-        "        df (pd.DataFrame, optional): data source. Defaults to function call load_data().\n",
+        "        df (pd.DataFrame, optional): data source. Defaults to None.\n",
         "\n",
         "    Returns:\n",
         "        bool: Flow control, True if everything works correctly\n",
@@ -137,40 +137,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 4,
       "metadata": {},
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "                 num_tweets\n",
-            "username                   \n",
-            "harjot_tweeting        7134\n",
-            "tasveersandhu          2091\n",
-            "shells_n_petals        1991\n",
-            "jot__b                 1841\n",
-            "rebelpacifist          1806\n",
-            "rumsomal               1722\n",
-            "Iamjazzie96            1502\n",
-            "Jass_k_G               1460\n",
-            "DigitalKisanBot        1453\n",
-            "z_khalique007          1446\n"
-          ]
-        },
-        {
-          "data": {
-            "text/plain": [
-              "True"
-            ]
-          },
-          "execution_count": 3,
-          "metadata": {},
-          "output_type": "execute_result"
-        }
-      ],
+      "outputs": [],
       "source": [
-        "def users_most_tweet_count(qty: int=10, df: pd.DataFrame=load_data()) -> bool:\n",
+        "def users_most_tweet_count(qty: int=10, df: pd.DataFrame=None) -> bool:\n",
         "    '''\n",
         "    users_most_tweet_count table of users and tweets count\n",
         "\n",
@@ -178,7 +149,7 @@
         "\n",
         "    Args:\n",
         "        qty (int, optional): number of users to be displayed. Defaults to 10.\n",
-        "        df (pd.DataFrame, optional): data source. Defaults to function call load_data().\n",
+        "        df (pd.DataFrame, optional): data source. Defaults to None.\n",
         "\n",
         "    Returns:\n",
         "        bool: Flow control, True if everything works correctly\n",
@@ -192,7 +163,7 @@
         "    print(users_df.head(10))\n",
         "    return True\n",
         "\n",
-        "users_most_tweet_count()"
+        "# users_most_tweet_count()"
       ]
     },
     {
@@ -206,7 +177,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "metadata": {
         "id": "bsnd12fq6wLk"
       },
@@ -220,6 +191,7 @@
         "    '''\n",
         "    options = dict(\n",
         "        top10retweets=tweets_most_retweeted,\n",
+        "        top10users=users_most_tweet_count,\n",
         "        exit=exit\n",
         "    )\n",
         "    \n",
@@ -250,7 +222,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
