:construction: > ADD dates_most_tweet_count option to main function in main.ipynb

--- a/main.ipynb
+++ b/main.ipynb
@@ -258,6 +258,7 @@
         "    options = dict(\n",
         "        top10retweets=tweets_most_retweeted,\n",
         "        top10users=users_most_tweet_count,\n",
+        "        top19dates=dates_most_tweet_count,\n",
         "        exit=exit\n",
         "    )\n",
         "    \n",
