:construction: > ADD hashtags_most_tweeted function to main.ipynb

--- a/main.ipynb
+++ b/main.ipynb
@@ -38,8 +38,7 @@
       "outputs": [],
       "source": [
         "import json as js\n",
-        "import pandas as pd\n",
-        "import re"
+        "import pandas as pd"
       ]
     },
     {
@@ -125,7 +124,7 @@
         "    print(top_qty[['content', 'retweetCount']])\n",
         "    return True\n",
         "\n",
-        "# tweets_most_retweeted()\n"
+        "# tweets_most_retweeted(df=load_data())\n"
       ]
     },
     {
@@ -163,7 +162,7 @@
         "    print(users_df.head(10))\n",
         "    return True\n",
         "\n",
-        "# users_most_tweet_count()"
+        "# users_most_tweet_count(df=load_data())"
       ]
     },
     {
@@ -177,36 +176,7 @@
       "cell_type": "code",
       "execution_count": 5,
       "metadata": {},
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "                           num_tweets\n",
-            "date                                 \n",
-            "2021-02-01T22:48:17+00:00          19\n",
-            "2021-02-03T20:12:09+00:00           8\n",
-            "2021-02-03T18:42:09+00:00           8\n",
-            "2021-02-02T07:21:31+00:00           7\n",
-            "2021-02-03T07:21:46+00:00           7\n",
-            "2021-02-04T04:25:44+00:00           7\n",
-            "2021-02-03T11:03:44+00:00           7\n",
-            "2021-02-03T09:55:29+00:00           7\n",
-            "2021-02-04T05:23:54+00:00           7\n",
-            "2021-02-03T10:07:16+00:00           7\n"
-          ]
-        },
-        {
-          "data": {
-            "text/plain": [
-              "True"
-            ]
-          },
-          "execution_count": 5,
-          "metadata": {},
-          "output_type": "execute_result"
-        }
-      ],
+      "outputs": [],
       "source": [
         "def dates_most_tweet_count(qty: int=10, df: pd.DataFrame=None) -> bool:\n",
         "    '''\n",
@@ -215,7 +185,7 @@
         "    Group Dataframe by users and sort by tweets count and display username and tweets count \n",
         "\n",
         "    Args:\n",
-        "        qty (int, optional): number of users to be displayed. Defaults to 10.\n",
+        "        qty (int, optional): number of dates to be displayed. Defaults to 10.\n",
         "        df (pd.DataFrame, optional): data source. Defaults to None.\n",
         "\n",
         "    Returns:\n",
@@ -229,7 +199,71 @@
         "    print(dates_df.head(10))\n",
         "    return True\n",
         "\n",
-        "dates_most_tweet_count(df=load_data())"
+        "# dates_most_tweet_count(df=load_data())"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### 3.4 Los Top 10 hashtags más usados"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 6,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "                          hashtags\n",
+            "FarmersProtest              400365\n",
+            "IStandWithFarmers            15745\n",
+            "farmersprotest               15394\n",
+            "IndianFarmersHumanRights     11859\n",
+            "FarmersAreIndia              10947\n",
+            "StandWithFarmers             10577\n",
+            "Rihanna                       9023\n",
+            "FarmersProtests               8714\n",
+            "Farmers                       6413\n",
+            "shameonbollywood              6166\n"
+          ]
+        },
+        {
+          "data": {
+            "text/plain": [
+              "True"
+            ]
+          },
+          "execution_count": 6,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "def hashtags_most_tweeted(qty: int=10, df: pd.DataFrame=None) -> bool:\n",
+        "    '''\n",
+        "    hashtags_most_tweeted table of hashtags and tweets count\n",
+        "\n",
+        "    Sort DataFrame by tweets count and display the hashtags of the specified best\n",
+        "\n",
+        "    Args:\n",
+        "        qty (int, optional): number of hashtags to be displayed. Defaults to 10.\n",
+        "        df (pd.DataFrame, optional): data source. Defaults to None.\n",
+        "\n",
+        "    Returns:\n",
+        "        bool: Flow control, True if everything works correctly\n",
+        "    '''\n",
+        "    new_df = pd.DataFrame()\n",
+        "    new_df['hashtags'] = df['content'].str.extractall(r'#(\\w+)').\\\n",
+        "        reset_index(level=0).drop_duplicates()[0].value_counts()\n",
+        "\n",
+        "    print(new_df.head(qty))\n",
+        "    return True\n",
+        "\n",
+        "hashtags_most_tweeted(df=load_data())"
       ]
     },
     {
@@ -243,7 +277,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 7,
       "metadata": {
         "id": "bsnd12fq6wLk"
       },
@@ -289,7 +323,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 8,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -303,7 +337,9 @@
           "output_type": "stream",
           "text": [
             "1. top10retweets\n",
-            "2. exit\n",
+            "2. top10users\n",
+            "3. top19dates\n",
+            "4. exit\n",
             "\n",
             "====================================================================================================\n"
           ]
