:construction: > ADD hashtags_most_tweeted option to main function in main.ipynb

--- a/main.ipynb
+++ b/main.ipynb
@@ -31,7 +31,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 3,
       "metadata": {
         "id": "Nhv-8CuP4nWU"
       },
@@ -52,7 +52,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 4,
       "metadata": {
         "id": "RGu67XJP6k_e"
       },
@@ -101,7 +101,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 5,
       "metadata": {
         "id": "hZUDhWIt6pmc"
       },
@@ -136,7 +136,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 6,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -174,7 +174,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 7,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -211,37 +211,9 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 8,
       "metadata": {},
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "                          hashtags\n",
-            "FarmersProtest              400365\n",
-            "IStandWithFarmers            15745\n",
-            "farmersprotest               15394\n",
-            "IndianFarmersHumanRights     11859\n",
-            "FarmersAreIndia              10947\n",
-            "StandWithFarmers             10577\n",
-            "Rihanna                       9023\n",
-            "FarmersProtests               8714\n",
-            "Farmers                       6413\n",
-            "shameonbollywood              6166\n"
-          ]
-        },
-        {
-          "data": {
-            "text/plain": [
-              "True"
-            ]
-          },
-          "execution_count": 6,
-          "metadata": {},
-          "output_type": "execute_result"
-        }
-      ],
+      "outputs": [],
       "source": [
         "def hashtags_most_tweeted(qty: int=10, df: pd.DataFrame=None) -> bool:\n",
         "    '''\n",
@@ -263,7 +235,7 @@
         "    print(new_df.head(qty))\n",
         "    return True\n",
         "\n",
-        "hashtags_most_tweeted(df=load_data())"
+        "# hashtags_most_tweeted(df=load_data())"
       ]
     },
     {
@@ -277,7 +249,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": 9,
       "metadata": {
         "id": "bsnd12fq6wLk"
       },
@@ -292,7 +264,8 @@
         "    options = dict(\n",
         "        top10retweets=tweets_most_retweeted,\n",
         "        top10users=users_most_tweet_count,\n",
-        "        top19dates=dates_most_tweet_count,\n",
+        "        top10dates=dates_most_tweet_count,\n",
+        "        top10hashtags=hashtags_most_tweeted,\n",
         "        exit=exit\n",
         "    )\n",
         "    \n",
@@ -323,7 +296,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": 10,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -338,8 +311,9 @@
           "text": [
             "1. top10retweets\n",
             "2. top10users\n",
-            "3. top19dates\n",
-            "4. exit\n",
+            "3. top10dates\n",
+            "4. top10hashtags\n",
+            "5. exit\n",
             "\n",
             "====================================================================================================\n"
           ]
