:recycle: > FIX exit error and path for data in main funtion in main.ipynb

--- a/main.ipynb
+++ b/main.ipynb
@@ -255,18 +255,21 @@
       },
       "outputs": [],
       "source": [
-        "def main():\n",
+        "def main(input_path: str) -> None:\n",
         "    '''\n",
         "    main executes selected option\n",
         "\n",
         "    display options and executes validated option\n",
         "    '''\n",
+        "    def correct_exit(*a, **kw):\n",
+        "        return False\n",
+        "    \n",
         "    options = dict(\n",
         "        top10retweets=tweets_most_retweeted,\n",
         "        top10users=users_most_tweet_count,\n",
         "        top10dates=dates_most_tweet_count,\n",
         "        top10hashtags=hashtags_most_tweeted,\n",
-        "        exit=exit\n",
+        "        exit=correct_exit\n",
         "    )\n",
         "    \n",
         "    res = True\n",
@@ -274,15 +277,13 @@
         "        for i, k in enumerate(options.keys()):\n",
         "            print(f'{i+1}. {k}')\n",
         "        \n",
-        "        option = input('Seleccione Una Opción: ')\n",
-        "        while option not in options:\n",
-        "            option = input('Opcion no Encontrada. Seleccione Una Opción: ')\n",
+        "        option = options.get(input('Seleccione Una Opción: '))\n",
+        "        while option is None:\n",
+        "            option = options.get(input('Opcion no Encontrada. Seleccione Una Opción: '))\n",
         "        \n",
-        "        ex = options.get(option, lambda: False)\n",
-        "        res = ex()\n",
-        "        res_string = f'Resultado:\\n{res}' if res else ''\n",
+        "        res = option(df=load_data(path=input_path))\n",
         "        \n",
-        "        print(f'{res_string}\\n{\"=\" *100}')"
+        "        print(f'\\n{\"=\" * 100}')"
       ]
     },
     {
@@ -321,7 +322,7 @@
       ],
       "source": [
         "if __name__ == '__main__':\n",
-        "    main()"
+        "    main(input('Ingrese path al dataset'))"
       ]
     }
   ],
